<resources>
    <string name="app_name" translatable="false">Dry Clean</string>
    <string name="ok">OK</string>
    <string name="default_error">Try again later</string>
    <string name="pervious">Pervious</string>
    <string name="next">Next</string>
    <string name="lets_start">Let\'s Start !</string>
    <string name="cat">categories</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="or">OR</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="address">Address</string>
    <string name="phone">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_pass_desc">We just need your registered Phone to send your password reset instruction</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="write_password_again">Write Password Again</string>
    <string name="save">Save</string>
    <string name="terms_and">Terms And Conditions</string>
    <string name="message">Message</string>
    <string name="write_you_complaint_here">Write Your Complaint Here</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="verfication">Verfication</string>
    <string name="verify_desc">Please enter the code sent to your phone number</string>
    <string name="continuee">Continue</string>
    <string name="offers">Offers</string>
    <string name="delivery">Delivery</string>
    <string name="sort_by">Sort By</string>
    <string name="near_by">Near By</string>
    <string name="rating">Rating</string>
    <string name="done">Done</string>
    <string name="to_get_started">To get started \nplease enter your location</string>
    <string name="or_let_us">Or let us help you with that. This helps you discover restaurants near you</string>
    <string name="locate_auto">Locate automatically</string>
    <string name="or_see_all">Or see all locations</string>
    <string name="select_size">Select Size</string>
    <string name="extras">Extras</string>
    <string name="special_ins">Special Instructions</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="write_instructions_here">Write instuctions here ....</string>
    <string name="my_basket">My Basket</string>
    <string name="remove">Remove</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fees">Delivery Fees</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="go_to_check_out">go to checkout</string>
    <string name="about_us">About Us</string>
    <string name="out_vision">Our Vision</string>
    <string name="our_mission">Our Mission</string>
    <string name="out_values">Our Values</string>
    <string name="contact_us">Contact Us</string>
    <string name="notifications">Notifications</string>
    <string name="my_orders">My Orders</string>
    <string name="accepted">Accepted</string>
    <string name="fill_form">Fill Form</string>
    <string name="wash_only">Wash Only</string>
    <string name="pcs">pcs</string>
    <string name="iron_only">Ironing Only</string>
    <string name="wash_and">Wash And Ironing</string>
    <string name="desc">Description</string>
    <string name="order">Order</string>
    <string name="about">About</string>
    <string name="order_now">Order Now !</string>
    <string name="already_had_account">Already has account ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
</resources>

