<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.activites.relatedToSettings.ForgetPasswordActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center"
            android:orientation="vertical">


            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_20ssp" />


            <my.apps.nada.project.dry.clean.activites.utilites.CairoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/forgot_pass_desc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />


            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@drawable/border_edit_text"
                android:hint="@string/phone"
                android:inputType="text"
                android:padding="@dimen/_4sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />


            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldButton
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/shape_btn"
                android:padding="@dimen/_5sdp"
                android:text="@string/reset_password"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_12ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>