<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.activites.beforeHome.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_6sdp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow_back_page_two"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="0dp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/back" />

            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toEndOf="@id/arrow_back_page_two"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:maxLength="30"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp">

                <requestFocus />
            </my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView>


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"

        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:src="@drawable/ic_password" />


            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:background="@drawable/border_edit_text"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:padding="@dimen/_4sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:background="@drawable/border_edit_text"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="@dimen/_4sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:background="@drawable/border_edit_text"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/write_password_again"
                android:inputType="textPassword"
                android:padding="@dimen/_4sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="@dimen/_12ssp" />

            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldButton
                android:id="@+id/reset_password"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/shape_btn"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:paddingStart="@dimen/_40sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:text="@string/save"
                android:textColor="@color/pdlg_color_white"
                android:textSize="@dimen/_13ssp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>