<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.activites.relatedToSettings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_6sdp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow_back_page_two"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="0dp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/back" />

            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toEndOf="@id/arrow_back_page_two"
                android:gravity="center"
                android:inputType="text"
                android:lines="1"
                android:maxLength="30"
                android:text="@string/settings"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp">

                <requestFocus />
            </my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView>


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView
                android:id="@+id/change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/_20sdp"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="#CDC9C0" />

            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView
                android:id="@+id/change_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_language"
                android:drawablePadding="@dimen/_20sdp"
                android:text="@string/language"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="#CDC9C0" />

            <my.apps.nada.project.dry.clean.activites.utilites.CairoBoldTextView
                android:id="@+id/terms_and"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_terms_and_conditions"
                android:drawablePadding="@dimen/_20sdp"
                android:text="@string/terms_and"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@color/seperator" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>